Bug 1746170 [Wayland] Check gFocusWindow visibility before we request xdg-activation, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D133885